# qml_ui_demo

./: ArrowButton.qml  BarChart.qml  CMakeLists.txt  Main.qml  PieChart.qml  SlideControlArray.qml  StickChart.qml  applicationmodel.cpp  applicationmodel.h  main.cpp  parameterslistmodel.cpp  parameterslistmodel.h
